<resources>
    <string name="app_name">Easybank</string>
    <string name="next">Next generation digital banking</string>
    <string name="take">Take your financial life online. Your Easybank
    account will be a one-stop-shop for spending, saving, budgeting, investing,
    and much more.</string>

    <string name="why">Why choose Easybank</string>
    <string name="we">We leverage Open Banking to turn your bank account into your
    financial hub. Control your finances like never before.</string>

    <string name="our">Our modern web and mobile applications allow
    you to keep track of your finances wherever you are in the world</string>

    <string name="see">See exactly where your money goes each month.
    Receive notifications when you\'re close to your hitting limits
    </string>

    <string name="dont">We don\'t do branches. Open your account in minutes
    online and start taking control of your finances right away.
    </string>

    <string name="manage">Manage your savings, investements, pension
    and much more from one account. Tracking your money has never been easier</string>

    <string name="receive">Receive money in any currency with no fees</string>
    <string name="smaller">The world is getting smaller and we\'re becoming more mobile. So why
    should you be forced to only receive money in a single</string>

    <string name="treat">Treat yourself without worrying about money</string>
    <string name="simple">Our simple budgetting feature allows you to seperate our your spending
    and set realistic limits each month. That means you…</string>

    <string name="plane">Take your Easybank card wherever you go</string>
    <string name="want">We want you to enjoy your travels. This is why we don\'t charge
    any fees on purchases while you\'re abroad. We\'ll even show you…</string>

    <string name="invite">Our invite-only Beta accounts are now live!</string>
    <string name="after">After a lot of hard work by the whole team. we\'re
    excited to launch our closed bete. It\'s easy to request an invite through the site…</string>


</resources>