<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/very_light_gray">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/relativeLayout">

            <ImageView
                android:id="@+id/action_bar"
                android:layout_width="match_parent"
                android:layout_height="63dp"
                android:background="@color/white" />

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:layout_marginTop="23dp"
                android:src="@drawable/logo" />

            <ImageButton
                android:id="@+id/hamburger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="23dp"
                android:layout_marginEnd="19dp"
                android:src="@drawable/icon_hamburger" />

            <RelativeLayout
                android:id="@+id/intro"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_below="@id/action_bar">

                <ImageView
                    android:id="@+id/bgIntro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    android:src="@drawable/bg_intro_mobile" />

                <ImageView
                    android:id="@+id/mockups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="180dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/image_mockups" />

            </RelativeLayout>

            <TextView
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/intro"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/publicsans"
                android:gravity="center"
                android:text="@string/next"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/take"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/next"
                android:layout_margin="30dp"
                android:gravity="center"
                android:text="@string/take"
                android:textSize="16sp" />

            <Button
                android:id="@+id/request"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/take"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button"
                android:fontFamily="@font/publicsans"
                android:text="Request Invite"
                android:textAllCaps="false"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/why"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/request"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="56dp"
                android:layout_marginTop="156dp"
                android:fontFamily="@font/publicsans"
                android:gravity="center"
                android:text="@string/why"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/we"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/why"
                android:layout_centerHorizontal="true"
                android:layout_margin="35dp"
                android:gravity="center"
                android:text="@string/we"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/we"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/online"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="58dp"
                        android:src="@drawable/icon_online" />

                    <TextView
                        android:id="@+id/banking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/online"
                        android:layout_margin="32dp"
                        android:gravity="center"
                        android:text="Online Banking"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/our"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/banking"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/our"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/budgeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="58dp"
                        android:src="@drawable/icon_budgeting" />

                    <TextView
                        android:id="@+id/budgetingText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/budgeting"
                        android:layout_margin="32dp"
                        android:gravity="center"
                        android:text="Simple Budgeting"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/see"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/budgetingText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/see"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/onboarding"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="58dp"
                        android:src="@drawable/icon_onboarding" />

                    <TextView
                        android:id="@+id/onboardingText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/onboarding"
                        android:layout_margin="32dp"
                        android:gravity="center"
                        android:text="Fast Onboarding"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/dont"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/onboardingText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/dont"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/api"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="58dp"
                        android:src="@drawable/icon_api" />

                    <TextView
                        android:id="@+id/apiText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/api"
                        android:layout_margin="32dp"
                        android:gravity="center"
                        android:text="Open API"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/manage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/apiText"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="32dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/manage"
                        android:textSize="16sp" />
                </RelativeLayout>


            </LinearLayout>

            <TextView
                android:id="@+id/article"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear"
                android:layout_marginTop="188dp"
                android:fontFamily="@font/publicsans"
                android:gravity="center"
                android:text="Latest Article"
                android:textSize="30sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/article" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recycleView"
                android:background="@color/dark_blue">

                <ImageView
                    android:id="@+id/logo2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:id="@+id/linear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/logo2"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:background="@drawable/icon_facebook"
                        android:src="@drawable/icon_facebook" />

                    <ImageButton
                        android:id="@+id/youtube"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:background="@drawable/icon_youtube"
                        android:src="@drawable/icon_youtube" />

                    <ImageButton
                        android:id="@+id/twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:background="@drawable/icon_twitter"
                        android:src="@drawable/icon_twitter" />

                    <ImageButton
                        android:id="@+id/pinterest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:background="@drawable/icon_pinterest"
                        android:src="@drawable/icon_pinterest" />

                    <ImageButton
                        android:id="@+id/instagram"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="14dp"
                        android:background="@drawable/icon_instagram"
                        android:src="@drawable/icon_instagram" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linear3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear2"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/about"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="About Us"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/contact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Contact"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/Blog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Blog"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/careers"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Careers"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/Support"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Support"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>

                    <TextView
                        android:id="@+id/policy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Privacy Policy"
                        android:textColor="@color/white"
                        android:textSize="17sp"/>


                </LinearLayout>

                <Button
                    android:id="@+id/invite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear3"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button"
                    android:text="Request Invite" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/invite"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="50dp"
                    android:text="Easybank. All Rights Reserved"
                    android:textColor="@color/white"
                    android:gravity="center_horizontal"
                    android:paddingBottom="47dp"/>


            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>


</RelativeLayout>